--- a/frontend-server/package.json
+++ b/frontend-server/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "backend",
+  "name": "frontend-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "knex": "^0.20.13",
-    "sqlite3": "^4.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
+    "axios": "^0.19.2",
+    "readline-sync": "^1.4.10"
   }
 }
